[FIX] web_gantt: dropdown overlapping on the content helper
Steps:
- Open Planning without demo data
- Click on the Week > dropdown menu will open

Issue:
- The dropdown menu is getting overlapped by the content helper.

Cause:
- Before the milky theme, this button was along with other buttons in the
control panel, but now it's moved inside hence there is a conflict in the
z-index of content helper and the dropdown menu

Fix:
- Changing the z-index of content helper

closes odoo/enterprise#49672

Task: 3446994
X-original-commit: 55dccdf5d2e0ef1b4d55dec906367af4c94127f8

--- a/web_gantt/static/src/gantt_view.variables.scss
+++ b/web_gantt/static/src/gantt_view.variables.scss
@@ -80,8 +80,8 @@
             interact: 20,
             // Top-most elements
             top: 30,
-            // No-content helper (on top of all)
-            view-nocontent: 40,
+            // No-content helper
+            view-nocontent: 25,
         ),
         $level
     );
